Ajout anime avec nouveau provider
- Modification du provider vers myanimelistofficiel
- Ajout du endpoint pour l'ajout en BDD d'un anime